consertado bug de overflow quando o titulo era maior que a div

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,8 @@ main {
     text-align: center;
     color: #B9B9B9;
     margin-bottom: 20px;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .meus-quizes>button {
@@ -154,6 +156,8 @@ main h3 {
     font-weight: 400;
     color: #FFFFFF;
     z-index: 1;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 /* TELA 2 */
